@@ -6,6 +6,7 @@ import java.io.FileOutputStream;
 import java.io.IOException;
 import java.io.OutputStream;
 import java.text.DateFormat;
+import java.text.DecimalFormat;
 import java.text.Format;
 import java.text.SimpleDateFormat;
 import java.util.ArrayList;
@@ -1343,6 +1344,8 @@ public class JobController extends WaspController {
 		//c. here get the runCost parameters and check for highly unexpected errors
 		param = "runCostResourceCategoryId";
 		String [] runCostResourceCategoryIdAsStringArray = request.getParameterValues(param);
+		param = "runCostRunType";
+		String [] runCostRunTypeArray = request.getParameterValues(param);		
 		param = "runCostReadLength";
 		String [] runCostReadLengthArray = request.getParameterValues(param);
 		param = "runCostReadType";
@@ -1351,12 +1354,12 @@ public class JobController extends WaspController {
 		String [] runCostNumberLanesArray = request.getParameterValues(param);
 		param = "runCostPricePerLane";
 		String [] runCostPricePerLaneArray = request.getParameterValues(param);	
-		if(runCostResourceCategoryIdAsStringArray==null || runCostReadLengthArray==null || runCostReadTypeArray==null || 
+		if(runCostResourceCategoryIdAsStringArray==null || runCostRunTypeArray==null || runCostReadLengthArray==null || runCostReadTypeArray==null || 
 				runCostNumberLanesArray==null || runCostPricePerLaneArray==null){
 			errors.add(messageService.getMessage("jobConstructQuote.problemSequenceRunInfo.error"));//"Unexpected problem interpreting sequence run information");
 		}			
 		int numberOfRunRows = runCostResourceCategoryIdAsStringArray.length;
-		if(runCostReadLengthArray.length != numberOfRunRows && runCostReadTypeArray.length != numberOfRunRows  &&
+		if(runCostRunTypeArray.length != numberOfRunRows && runCostReadLengthArray.length != numberOfRunRows && runCostReadTypeArray.length != numberOfRunRows  &&
 				runCostNumberLanesArray.length != numberOfRunRows && runCostPricePerLaneArray.length != numberOfRunRows ){
 			errors.add(messageService.getMessage("jobConstructQuote.problemSequenceRunInfo.error"));//"Unexpected problem interpreting sequence run information");
 		}
@@ -1450,6 +1453,7 @@ public class JobController extends WaspController {
 		
 		for(int i = 0; i < numberOfRunRows; i++){ 
 			if( "".equals(runCostResourceCategoryIdAsStringArray[i].trim())	 &&
+				"".equals(runCostRunTypeArray[i].trim())	 &&
 				"".equals(runCostReadLengthArray[i].trim())	 &&
 				"".equals(runCostReadTypeArray[i].trim())	 &&
 				"".equals(runCostNumberLanesArray[i].trim()) &&
@@ -1457,6 +1461,7 @@ public class JobController extends WaspController {
 				continue;
 			}
 			if( "".equals(runCostResourceCategoryIdAsStringArray[i].trim())    ||
+				"".equals(runCostRunTypeArray[i].trim()) ||
 				"".equals(runCostReadLengthArray[i].trim())	||
 				"".equals(runCostReadTypeArray[i].trim())	||
 				"".equals(runCostNumberLanesArray[i].trim()) ||
@@ -1503,7 +1508,7 @@ public class JobController extends WaspController {
 				errors.add(messageService.getMessage("jobConstructQuote.row.error")+" "+(i+1)+": "+messageService.getMessage("jobConstructQuote.sequenceRunWholeNumberForCostPerLane.error"));
 			}
 			if(errors.isEmpty()){
-				sequencingCosts.add(new SequencingCost(resourceCategory, readLength, runCostReadTypeArray[i].trim(),numberOfLanes, new Float(costPerLane)));
+				sequencingCosts.add(new SequencingCost(resourceCategory, runCostRunTypeArray[i].trim(), readLength, runCostReadTypeArray[i].trim(),numberOfLanes, new Float(costPerLane)));
 			}
 		}
 
@@ -1550,7 +1555,7 @@ public class JobController extends WaspController {
 		
 		List<Discount> discounts = mpsQuote.getDiscounts();
 
-		int cumulativePercentDiscount = 0;
+		Double cumulativePercentDiscount = 0.0;
  	    List<String> discountReasonList = new ArrayList<String>();
 
  		String currencyIcon = mpsQuote.getLocalCurrencyIcon();//Currency.getInstance(Locale.getDefault()).getSymbol();//+String.format("%.2f", price)); 
@@ -1558,12 +1563,12 @@ public class JobController extends WaspController {
  		for(int i = 0; i < numberOfDiscountRows; i++){
 			if( "".equals(discountReasonArray[i].trim())	 &&
 				"".equals(discountTypeArray[i].trim())	 &&
-				"".equals(discountValueArray[i].trim()) ){
+				"".equals(discountValueArray[i].trim().replaceAll("%", "").replaceAll(currencyIcon, "")) ){
 					continue;
 			}
 			else if( "".equals(discountReasonArray[i].trim())	 ||
 					 "".equals(discountTypeArray[i].trim())	 ||
-					 "".equals(discountValueArray[i].trim()) ){
+					 "".equals(discountValueArray[i].trim().replaceAll("%", "").replaceAll(currencyIcon, "")) ){
 						//errors.add("Row "+(i+1) + " in Discount/Credit section is missing information - Please review");
 						errors.add(messageService.getMessage("jobConstructQuote.row.error")+" "+(i+1)+": "+messageService.getMessage("jobConstructQuote.discountCreditMissingInfo.error"));			
 			}
@@ -1583,21 +1588,22 @@ public class JobController extends WaspController {
 					errors.add(messageService.getMessage("jobConstructQuote.row.error")+" "+(i+1)+": "+messageService.getMessage("jobConstructQuote.discountCreditSelectDiscountType.error") + " " + currencyIcon + " or %");			
 				}
 			}
-			Integer discountValue=null;
+			Double discountValue=null;
 			try{
-				if(!"".equals(discountValueArray[i].trim())){
-					discountValue = new Integer(discountValueArray[i].trim());
+				if(!"".equals(discountValueArray[i].trim().replaceAll("%", "").replaceAll(currencyIcon, ""))){
+					DecimalFormat twoDFormat = new DecimalFormat("#.##");
+					String twoDString = discountValueArray[i].trim().replaceAll("%", "").replaceAll(currencyIcon, "");
+					discountValue = Double.valueOf(twoDFormat.format(Double.parseDouble(twoDString)));
 					if("%".equals(discountTypeArray[i].trim())){
 						cumulativePercentDiscount += discountValue;
-						if(discountValue >100){
+						if(discountValue > 100.00){
 							//errors.add("Row "+(i+1) + " in Discount/Credit section cannot be greater than 100% - please modify or remove");
 							errors.add(messageService.getMessage("jobConstructQuote.row.error")+" "+(i+1)+": "+messageService.getMessage("jobConstructQuote.discountCreditGreaterThan100Percent.error"));			
 						}
 					}										
 				}
 			}catch(Exception e){
-				//errors.add("Row "+(i+1) + " in Discount/Credit section is missing information - enter a whole number for discount; no fractions allowed (example: enter 25 for 25%)");
-				errors.add(messageService.getMessage("jobConstructQuote.row.error")+" "+(i+1)+": "+messageService.getMessage("jobConstructQuote.discountCreditWholeNumberForDiscount.error"));			
+				errors.add(messageService.getMessage("jobConstructQuote.row.error")+" "+(i+1)+": "+messageService.getMessage("jobConstructQuote.discountCreditCheckValueForDiscount.error"));			
 			}
 			
 			if(errors.isEmpty()){
@@ -1605,7 +1611,7 @@ public class JobController extends WaspController {
 			}
 		}
  		
- 		if(cumulativePercentDiscount>100){
+ 		if(cumulativePercentDiscount>100.00){
 			//errors.add("Cumulative Discount Percent may not exceed 100%");
 			errors.add(messageService.getMessage("jobConstructQuote.discountCreditCumulativeDiscountCannotExceed100Percent.error"));			
 		}
